@@ -33,6 +33,10 @@ define("DATA_QUERY_INDEX_SORT_TYPE_ALPHABETIC", 2);
 define("DATA_QUERY_INDEX_SORT_TYPE_NUMERIC", 3);
 define("DATA_QUERY_INDEX_SORT_TYPE_NATURAL", 4);
 
+define("DATA_QUERY_INDEX_IGNORE_NOTHING", 0);
+define("DATA_QUERY_INDEX_IGNORE_NULLS", 1);
+define("DATA_QUERY_INDEX_IGNORE_DUP_NULLS", 2);
+
 # taken from 090 code
 #define("DATA_QUERY_INPUT_TYPE_SNMP_QUERY", 1);
 #define("DATA_QUERY_INPUT_TYPE_SCRIPT_QUERY", 2);
