@@ -27,3 +27,4 @@ require_once(CACTI_BASE_PATH . "/include/poller/poller_constants.php");
 $poller_options = array(
 	POLLER_CMD		=> "cmd.php",
 	POLLER_SPINE	=> "spine");
+	
