@@ -141,6 +141,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -feature#0001542: Rewriting SNMP values of data queries
 -feature#0001550: Record the polling time for each host to optimize polling times
 -feature#0001588: Add pango-markup options to simple html markup in graphed text (title, legend etc)
+-feature#0002003: Ignore empty index values when polling misbehaving snmp devices
 -feature: jQuery "TableDnd" used for cdef item sort (courtesy Browniebraun)
 -feature: jQuery "TableDnd" for Graph Template Item
 -feature: jQuery "TableDnd" for Data Queries Suggested Values
